# eudi-rust-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/scripts/: check_copyright_license.sh  release_validations.sh
.github/workflows/: ci.yaml  release.yaml
bh-jws-utils/: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
bh-jws-utils/files/: public_key.pem
bh-jws-utils/src/: error.rs  jwk.rs  kid.rs  lib.rs  openssl_impl.rs  traits.rs  utils.rs  x509_chain.rs
bh-sd-jwt/: CHANGELOG.md  Cargo.toml  README.md
bh-sd-jwt/examples/: sd_jwt_vc_e2e.rs  simple-example.rs
bh-sd-jwt/src/: decoder.rs  encoder.rs  error.rs  holder.rs  issuer.rs  key_binding.rs  lib.rs  lookup.rs  models.rs  sd_jwt.rs  test_utils.rs  traits.rs  utils.rs  verifier.rs
bh-sd-jwt/src/models/: disclosure.rs  error.rs  path.rs  path_map.rs
bh-sd-jwt/src/test_utils/: symbolic_crypto.rs
bh-sd-jwt/src/traits/: hasher.rs  impl.rs
bh-status-list/: CHANGELOG.md  Cargo.toml  README.md
bh-status-list/src/: client.rs  error.rs  lib.rs  status_list.rs  status_list_token.rs  vc_claim.rs
bh-status-list/src/utils/: jwt.rs  mod.rs
bh-uri-utils/: CHANGELOG.md  Cargo.toml  README.md
bh-uri-utils/src/: lib.rs
bherror/: CHANGELOG.md  Cargo.toml  README.md
bherror/src/: display.rs  lib.rs
bherror/src/adapters/: axum.rs  mod.rs
bherror/src/traits/: error_context.rs  foreign_error.rs  loggable.rs  mod.rs  propagate_error.rs
bhmdoc/: CHANGELOG.md  Cargo.toml  README.md
bhmdoc/examples/: README.md  full_flow.rs
bhmdoc/examples/certs/: generate_certs_and_key.sh  intermediary.crt  intermediary.key  root.config  root.crt
bhmdoc/src/: device.rs  error.rs  issuer.rs  lib.rs  verifier.rs
bhmdoc/src/models/: issue.rs  mdl.rs  mod.rs
bhmdoc/src/models/data_retrieval/: common.rs  mod.rs
bhmdoc/src/models/data_retrieval/device_retrieval/: device_auth.rs  issuer_auth.rs  mod.rs  reader_auth.rs  request.rs  response.rs
bhmdoc/src/utils/: base64.rs  coset.rs  digest.rs  json.rs  mod.rs  rand.rs  test.rs
bhx5chain/: CHANGELOG.md  Cargo.toml  README.md
bhx5chain/src/: builder.rs  error.rs  jwt.rs  lib.rs  x5chain.rs
