[package]
name = "bh-jws-utils"
version = "0.3.0"
authors = ["TBTL Tech <tech@tbtl.com>"]
categories = ["cryptography"]
description = "TBTL's library for handling JSON Web Signatures (JWS)."
edition = "2021"
keywords = ["json", "jws", "jwt", "tbtl"]
license-file = "../COPYING"
readme = "README.md"
repository = "https://github.com/blockhousetech/eudi-rust-core"

[dependencies]
base64 = "0.21.7"
bherror = "0.1"
bhx5chain = "0.2"
iref = "3.2"
# `jwt` crate supports cryptography backend injection for signing/verification
# via traits, unlike the much more popular `jsonwebtoken`
jwt = "0.16.0"
# We need `openssl` for more than just the signer backend implementation, so
# it's no longer optional
openssl = { version = "0.10" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum_macros = "0.27"

[dev-dependencies]
bhx5chain = { version = "0.2", features = ["test-utils"] }

[package.metadata.docs.rs]
all-features = true
