[package]
name = "bherror"
version = "0.1.0"
authors = ["TBTL Tech <tech@tbtl.com>"]
categories = ["rust-patterns"]
description = "TBTL's library for error handling in Rust."
edition = "2021"
keywords = ["error", "error-handling", "tbtl"]
license-file = "../COPYING"
readme = "README.md"
repository = "https://github.com/blockhousetech/eudi-rust-core"

[dependencies]
axum = { version = "0.7", optional = true }
log = "0.4.17"
serde_json = "1.0.105"

[features]
axum = ["dep:axum"]

[package.metadata.docs.rs]
all-features = true
