[package]
name = "bhmdoc"
version = "0.4.0"
authors = ["TBTL Tech <tech@tbtl.com>"]
categories = ["authentication", "cryptography", "encoding"]
description = "TBTL's library for handling mDL/mdoc specification."
edition = "2021"
keywords = ["mdl", "mdoc", "openid4vc", "tbtl"]
license-file = "../COPYING"
readme = "README.md"
repository = "https://github.com/blockhousetech/eudi-rust-core"

[dependencies]
base64 = "0.21"
bh-jws-utils = "0.6"
bherror = "0.1"
bhx5chain = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
coset = "0.3"
hex = "0.4"
openssl = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.27"

[dev-dependencies]
assert_matches = "1.5.0"

[[example]]
name = "full_flow"
test = true
# We need to disable the default test harness so the example's `main` function
# can be used as the entry point.
harness = false
